--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "sirv dist --port 3000 --single --brotli"
   },
   "dependencies": {
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "antd": "^6.1.1",
     "diff-match-patch": "^1.0.5",
     "immer": "^11.1.0",
