--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "typeorm:migration:run": "npm run typeorm -- migration:run",
     "typeorm:migration:revert": "npm run typeorm -- migration:revert",
     "docs:dev": "cd docs/website && vitepress dev",
-    "docs:build": "cd docs/website && vitepress build",
+    "docs:build": "pnpm openapi:export && cd docs/website && vitepress build",
+    "docs:build:raw": "cd docs/website && vitepress build",
     "docs:preview": "cd docs/website && vitepress preview",
+    "openapi:export": "ts-node -r tsconfig-paths/register scripts/export-openapi.ts",
     "batch-insert-blocks": "node scripts/batch-insert-blocks.js"
   },
   "dependencies": {
@@ -39,6 +41,8 @@
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^10.0.1",
     "bcryptjs": "^2.4.3",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
@@ -63,6 +67,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^3.0.13",
@@ -74,6 +79,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "js-yaml": "^4.1.1",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
