✨ feat(server): 引入运行时配置中心并实现全局限流热更新
新增 runtime-config 模块，支持 DB 持久化 + 内存缓存 + 轮询同步， 新增 runtime_configs 实体与迁移，支持配置项按 key 管理，恢复全局
ThrottlerGuard，限流参数改为运行时动态读取，新增 x-system-admin-token 管理接口与守卫（读取/更新/重置限流配置），统一 429 错误码映射为
RATE_6001，补充 .env.example 与 VitePress API/设计文档（含详细技术设计与使用说明）

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -138,6 +138,12 @@ RATE_LIMIT_TTL=60000
 # 最大请求数
 RATE_LIMIT_MAX=100
 
+# 运行时配置轮询间隔（毫秒）
+RUNTIME_CONFIG_POLL_INTERVAL_MS=5000
+
+# 运行时配置管理员令牌（用于修改限流等系统级运行时配置）
+SYSTEM_ADMIN_TOKEN=change-this-token-in-production
+
 # ============================================
 # WebSocket 配置（实时协作）
 # ============================================
